add Docker support & configure JVM options
- add Dockerfile for containerized deployment
- add .dockerignore to optimize build context
- configure required JVM --add-opens options for Java module access